# sopel-py

./: NEWS  README.md  pyproject.toml  setup.cfg  setup.py
sopel_py/: plugin.py
